--- a/assignments/todo_list/todo.html
+++ b/assignments/todo_list/todo.html
@@ -8,6 +8,14 @@
             <button type='submit'>Add Todo</button>
             <div class='todos'></div>
         </div>
+        <div class="api">
+            <select class="buttonApi">
+                <option>click</option>
+                <option class="completed">Completed</option>
+                <option class="pending">Pending</option>
+            </select>
+            <div class="insert"></div>
+        </div>
     </body>
     <script src='./script.js'></script>
-</html>
+</html>  
